# pointtree

./: .clang-format  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .rcfile  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  citation.cff  pyproject.toml
.github/workflows/: build-docker-image-2.yml  build-docker-image-3.yml  build-docker-image.yml  clean-up-pull-requests.yml  code-quality-main.yml  code-quality-pull-requests.yml  code-quality.yml  conventional-commits-pull-requests.yml  deploy-docs.yml  generate-docs.yml  main.yml  pull-requests-conventional-commits.yml  pull-requests.yml  python-publish.yml  release-package.yml  sphinx.yml  static.yml
csrc/include/PointTree/: type_aliases.h
csrc/include/PointTree/evaluation/: instance_segmentation_metrics.h
csrc/include/PointTree/instance_segmentation/: coarse_to_fine_algorithm.h  tree_x_algorithm.h
csrc/include/PointTree/operations/: distance_to_dtm.h  fit_ellipse.h  points_in_ellipse.h  stddev.h
csrc/instance_segmentation/: tree_x_algorithm.cpp  tree_x_algorithm.h
csrc/operations/: fit_ellipse.cpp  fit_ellipse.h  points_in_ellipse.cpp  points_in_ellipse.h
csrc/pybind/: evaluation_pybind.cpp  operations_pybind.cpp
csrc/pybind/instance_segmentation/: coarse_to_fine_algorithm_pybind.cpp  tree_x_algorithm_pybind.cpp
docs/_build/html/: forest3d.config.html  forest3d.evaluation.html  forest3d.html  forest3d.instance_segmentation.html  forest3d.io.html  forest3d.operations.html  forest3d.visualization.html  index.html  modules.html  objects.inv  pointtree.config.html  pointtree.evaluation.html  pointtree.html  pointtree.instance_segmentation.html  pointtree.io.html  pointtree.operations.html  pointtree.visualization.html  robots.txt  search.html  searchindex.js  sitemap.xml
docs/_build/html/_modules/: index.html
docs/_build/html/_static/: autoclass.css
docs/_static/: autoclass.css
docs/_templates/: module.rst_t
docs/source/: conf.py  forest3d.config.rst  forest3d.evaluation.rst  forest3d.instance_segmentation.rst  forest3d.io.rst  forest3d.operations.rst  forest3d.rst  forest3d.visualization.rst  index.rst  modules.rst  pointtree.config.rst  pointtree.evaluation.rst  pointtree.instance_segmentation.rst  pointtree.io.rst  pointtree.operations.rst  pointtree.rst  pointtree.visualization.rst  robots.txt
docs/source/_static/: autoclass.css
docs/source/_templates/: 404.html  package.rst_t  versions.html
docs/source/apidoc_templates/: 404.html  index.html  module.rst_t  version.html  versions.html
docs/source/changelog/: index.rst
docs/source/develop/: index.rst
docs/source/development/: index.rst
docs/source/how-to/install/includes/: clone.sh  install.sh
mypy_stubs/numba_kdtree/: kdtree.pyi
mypy_stubs/scipy/: ndimage.pyi  optimize.pyi
mypy_stubs/scipy/spatial/: __init__.pyi  kdtree.pyi
mypy_stubs/sklearn/: cluster.pyi  decomposition.pyi  linear_model.pyi
mypy_stubs/torch_scatter/: __init__.py  scatter_max.pyi  segment_csr.pyi
notebooks/: 0_evaluate_semantic_segmentation_old.ipynb  0_preprocess_semantic_segmentation.ipynb  1_evaluate_semantic_segmentation.ipynb  2_color_semantic_segmentation.ipynb  3_evaluate_instance_segmentation.ipynb  4_color_instance_segmentation.ipynb  4_evaluate_instance_segmentation_old.ipynb
src/forest3d/evaluation/: __init__.py  _metrics.py  _time_tracker.py  _timer.py
src/forest3d/instance_segmentation/: __init__.py  _instance_segmentation_algorithm.py  _multi_stage_algorithm.py  _priority_queue.py  _utils.py
src/forest3d/io/: __init__.py  _base_point_cloud_writer.py  _csv_reader.py  _csv_writer.py  _las_reader.py  _las_writer.py  _point_cloud_io_data.py  _point_cloud_reader.py  _point_cloud_writer.py
src/forest3d/operations/: __init__.py  _knn_search.py  _ravel_index.py  _voxel_downsampling.py
src/forest3d/visualization/: __init__.py  _color_palette.py  _color_point_cloud.py  _hex_to_rgb.py  _save_tree_map.py
src/pointtree/: type_aliases.py
src/pointtree/config/: __init__.py  _config.py
src/pointtree/evaluation/: __init__.py  _instance_segmentation_metrics.py  _match_instances.py  _metrics.py  _performance_tracker.py  _profiler.py  _semantic_segmentation_metrics.py  _time_tracker.py  _timer.py
src/pointtree/instance_segmentation/: __init__.py  _coarse_to_fine_algorithm.py  _coarse_to_fine_tree_x_algorithm.py  _instance_segmentation_algorithm.py  _multi_stage_algorithm.py  _priority_queue.py  _tree_x_algorithm.py  filters.py  tree_x_presets.py
src/pointtree/io/: __init__.py  _base_point_cloud_reader.py  _base_point_cloud_writer.py  _csv_writer.py  _las_reader.py  _las_writer.py
src/pointtree/operations/: __init__.py  _cloth_simulation_filtering.py  _create_digital_terrain_model.py  _distance_to_dtm.py  _estimate_with_linear_model.py  _fit_ellipse.py  _knn_search.py  _make_labels_consecutive.py  _no_stdout.py  _normalize_height.py  _pack_batch.py  _points_in_ellipse.py  _polygon_area.py  _ravel_index.py  _statistical_outlier_removal.py  _voxel_downsampling.py
src/pointtree/visualization/: __init__.py  _color_palette.py  _color_point_cloud.py  _hex_to_rgb.py  _plot_circle_fit.py  _plot_fitted_shape.py  _save_tree_map.py
test/evaluation/: test_instance_segmentation_metrics.py  test_match_instances.py  test_metrics.py  test_performance_tracker.py  test_profiler.py  test_semantic_segmentation_metrics.py  test_time_tracker.py  test_timer.py
test/instance_segmentation/: test_coarse_to_fine_algorithm.py  test_filters.py  test_multi_stage_algorithm.py  test_priority_queue.py  test_tree_x_algorithm.py  test_tree_x_presets.py  test_utils.py
test/operations/: test_cloth_simulation_filtering.py  test_create_digital_terrain_model.py  test_distance_to_dtm.py  test_estimate_with_linear_model.py  test_fit_ellipse.py  test_make_labels_consecutive.py  test_normalize_height.py  test_points_in_ellipse.py  test_polygon_area.py  test_statistical_outlier_removal.py
test/utils/: __init__.py  _generate_points.py  _generate_tree_point_cloud.py
test/visualization/: test_plot_fitted_shape.py
(+40 files in other folders)
