[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pointtree"
version = "0.1.0"
authors = [
  {name = "Josafat-Mattias Burmeister", email = "burmeister@uni-potsdam.de"},
]
maintainers = [
  {name = "Josafat-Mattias Burmeister", email = "burmeister@uni-potsdam.de"}
]
description = "A Python Package for Tree Instance Segmentation in 3D Point Clouds."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tree", "point cloud", "segmentation"]
requires-python = ">=3.10, <3.13"
dependencies = [
    "circle_detection>=0.1.0, <2.0.0",
    "cloth-simulation-filter>=1.1.5, <2.0.0",
    "laspy>=2.0.0, <3.0.0",
    "numba>=0.55.0, <1.0.0",
    "numpy>=1.21.0, <3.0.0",
    "pandas>=2.0.0, <3.0.0",
    "pointtorch>=0.1.0, <1.0.0",
    "psutil>=5.9.0, < 7.0.0",
    "pyclesperanto-prototype>=0.22.0, <1.0.0",
    "pygam>=0.9.0, <1.0.0",
    "rasterio>=1.3.9, <1.4.3",
    "scipy>=1.8.0, <2.0.0",
    "scikit-image>=0.25.0, <1.0.0",
    "scikit-learn>=1.2.0, <2.0.0"
]
[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "scipy-stubs",
    "types-Pillow",
    "types-psutil",
]
docs = [
    "sphinx>=7.0.0, <9.0.0",
    "sphinx-autodoc-typehints>=2.0.0, <4.0.0",
    "sphinx-copybutton<1.0.0",
    "sphinx-design<1.0.0",
    "sphinx-docsearch<1.0.0",
    "sphinx-mdinclude<1.0.0",
    "sphinx-sitemap>=2.0.0, <3.0.0",
    "sphinxawesome-theme>=5.0.0, <6.0.0",
    "sphinxcontrib-jsmath<2.0.0",
    "sphinxcontrib-katex<1.0.0",
    "sphinxcontrib-napoleon<1.0.0",
]

[project.urls]
Homepage = "https://github.com/ai4trees/pointtree"
Documentation = "https://ai4trees.github.io/pointtree/"
Repository = "https://github.com/ai4trees/pointtree.git"
Issues = "https://github.com/ai4trees/pointtree/issues"
Changelog = "https://ai4trees.github.io/pointtree/changelog"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python -m build"

[tool.setuptools.package-data]
pointtree = ["*.typed"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
build.verbose = true
